samples/_failures_safe/1761359393_01355f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a073c449.c: In function ‘main’:
./samples/SAFE/__tmp_a073c449.c:159:23: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  159 |     int token_count = token
      |                       ^~~~~
      |                       Token
./samples/SAFE/__tmp_a073c449.c:159:23: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a073c449.c:159:5: error: expected ‘,’ or ‘;’ at end of input
  159 |     int token_count = token
      |     ^~~
./samples/SAFE/__tmp_a073c449.c:159:5: error: expected declaration or statement at end of input
